--- a/index.html
+++ b/index.html
@@ -2,63 +2,12 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>The plain template html</title>
+	<title>TheBasement</title>
 	<link href="" rel="stylesheet">
 </head>
 <body>
 	<header>
-		<h2>Very Plain HTML5</h2>
-		<nav>
-			<ul>
-				<li><a href="">Menu 1</a></li>
-				<li><a href="">Menu 2</a></li>
-				<li><a href="">Menu 3</a></li>
-				<li><a href="">Menu 4</a></li>
-			</ul>
-		</nav>
+		<h2>Hello<h2>
 	</header>
-	<section id="content-article">
-		<h3>Lorem ipsum dolor sit amet</h3>
-		<article>
-			<p>
-				Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. 
-				At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. 
-				Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
-				At vero eos et accusam et justo duo dolores et ea rebum.
-			</p>
-			<p>
-				Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. 
-				Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
-				At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-			</p>
-		</article>
-	</section>
-	<section>
-		<button> Primary </button>
-		<button> Info </button>
-		<button> Warning </button>
-		<button> Danger </button>
-	</section>
-	<aside>
-		<ul>
-			<li><a href="">Link 1</a></li>
-			<li><a href="">Link 2</a></li>
-			<li><a href="">Link 3</a></li>
-		</ul>
-	</aside>
-	<section>
-		<h4>Comment</h4>
-		<form>
-			<label>Yourname</label><br/>
-			<input type="text"><br/>
-			<label>Email</label><br/>
-			<input type="text"><br/>
-			<label>Comment</label><br/>
-			<input type="text">
-		</form>
-	</section>
-	<footer>
-		&copy yourname 20xx
-	</footer>
 </body>
 </html>
