--- a/something.html
+++ b/something.html
@@ -1,1 +1,1 @@
-Something
+<iframe src="https://www.google.com/maps/d/u/0/embed?mid=1CSmns71qvcox-qzv2IGxqibewUdHoJNH" style="position:absolute;height:100%;width:100%;border:none"></iframe>
