--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ h1   {
   <h1>The Basement</h1>
     <div class="grid-container">
         <div class="zoom">
-            <a href="something.html"><img src="wpid-goat_raymonds_450x300.jpg"></a>
+            <a href="something"><img src="wpid-goat_raymonds_450x300.jpg"></a>
             <p>Something</p>
         </div>
       </div>
