Made title more clear

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
     <title>The Basement</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<head>
+  <link rel="stylesheet" href="./obnoxious.css">
+</head>
+
 <style>
 * {
   box-sizing: border-box;
@@ -40,7 +44,7 @@ h1   {
 </style>
 </head>
 <body>
-  <h1>The Basement</h1>
+  <h1 class="animated intensifies">The Basement</h1>
     <div class="grid-container">
         <div class="zoom">
             <a href="something"><img src="wpid-goat_raymonds_450x300.jpg"></a>
