--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
     <title>The Basement</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="./obnoxious.css">
+  <script src="https://unpkg.com/matter-js@0.17.1/build/matter.js" ></script>
 </head>
 
 <style>
@@ -54,3 +54,38 @@ h1   {
 
 </body>
 </html>
+
+<script>
+  // module aliases
+var Engine = Matter.Engine,
+    Render = Matter.Render,
+    Runner = Matter.Runner,
+    Bodies = Matter.Bodies,
+    Composite = Matter.Composite;
+
+// create an engine
+var engine = Engine.create();
+
+// create a renderer
+var render = Render.create({
+    element: document.body,
+    engine: engine
+});
+
+// create two boxes and a ground
+var boxA = Bodies.rectangle(400, 200, 80, 80);
+var boxB = Bodies.rectangle(450, 50, 80, 80);
+var ground = Bodies.rectangle(400, 610, 810, 60, { isStatic: true });
+
+// add all of the bodies to the world
+Composite.add(engine.world, [boxA, boxB, ground]);
+
+// run the renderer
+Render.run(render);
+
+// create runner
+var runner = Runner.create();
+
+// run the engine
+Runner.run(runner, engine);
+</script>
