--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@ h1   {
         <div class="zoom">
             <a href="something"><img src="wpid-goat_raymonds_450x300.jpg"></a>
             <p>Something</p>
+            <a href="lemon"><img src="lemon.png"></a>
+            <p>Lemon</p>
         </div>
       </div>
 
