--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ h1   {
         <div class="zoom">
             <a href="something"><img src="wpid-goat_raymonds_450x300.jpg"></a>
             <p>Something</p>
-            <a href="lemon"><img src="lemon.png"></a>
+            <a href="lemon"><img src="lemon.jpg"></a>
             <p>Lemon</p>
         </div>
       </div>
