--- a/BasedCoin.html
+++ b/BasedCoin.html
@@ -437,6 +437,7 @@
     });
 
     function mint() {
+	myContract_write.value = store.value;
         myContract_write.buy(store.value).then(function (result) {result_span.innerHTML = `Transaction Hash : ${result.hash}`;});
       
     }
