--- a/BasedCoin.html
+++ b/BasedCoin.html
@@ -437,8 +437,7 @@
     });
 
     function mint() {
-        myContract_write.buy({value: store.value}).then(function (result) {result_span.innerHTML = `Transaction Hash : ${result.hash}`;});
-      
+        myContract_write.methods.buy().send({value: store.value}).then(function (result) {result_span.innerHTML = `Transaction Hash : ${result.hash}`;});
     }
     function show_balance() {
         myContract_read.balances(usr_address).then(function (result) {result_span.innerHTML = `Stored Data : ${result}`;});
