--- a/index.html
+++ b/index.html
@@ -52,8 +52,25 @@ h1   {
             <a href="lemon"><img src="https://img-9gag-fun.9cache.com/photo/abMqvK8_460s.jpg"></a>
             <p>Lemon</p>
         </div>
-      </div>
-
+    </div>
+    <div class="top5Reasons">
+        <div id="idk">
+            <div id="MonkeyImageContainment" style="float:left; width:50%">
+                <img src="ballinMonkey.jpg" height="400" width="400">
+            </div>
+            <div id="MonkeyListContainment" style="margin-left:50%; width:50%">
+                <h2 style="color:azure">Top 5 reasons this monkey is ballin'</h2>
+                <ol style="color:aliceblue">
+                    <li>basketball</li>
+                    <li>broken your ankles</li>
+                    <li>has a basketball</li>
+                    <li>is cute</li>
+                    <li>invested in basedcoin</li>
+                </ol>
+            </div>
+        </div>
+    </div>
+    </body>
 </body>
 </html>
 
