--- a/index.html
+++ b/index.html
@@ -47,10 +47,16 @@ h1   {
   <h1 class="animated intensifies">The Baseeeeeeeeeeement</h1>
     <div class="grid-container">
         <div class="zoom">
-            <a href="something"><img src="wpid-goat_raymonds_450x300.jpg"></a>
-            <p>Something</p>
-            <a href="lemon"><img src="https://img-9gag-fun.9cache.com/photo/abMqvK8_460s.jpg"></a>
-            <p>Lemon</p>
+          <a href="something"><img src="wpid-goat_raymonds_450x300.jpg"></a>
+          <p>Something</p>
+        </div>
+        <div class="zoom">
+          <a href="lemon"><img src="https://img-9gag-fun.9cache.com/photo/abMqvK8_460s.jpg"></a>
+          <p>Lemon</p>
+        </div>
+        <div class="zoom">            
+          <a href="cube"><img src="cube.jpg"></a>
+          <p>Cuubeee</p>
         </div>
     </div>
     <div class="top5Reasons">
